@@ -21,6 +21,8 @@
         <air.check.skip-pmd>true</air.check.skip-pmd>
         <air.check.skip-spotbugs>true</air.check.skip-spotbugs>
         <dep.airlift.version>289</dep.airlift.version>
+        <air.compiler.enable-preview>true</air.compiler.enable-preview>
+        <project.build.targetJdk>24</project.build.targetJdk>
     </properties>
 
     <dependencyManagement>
@@ -86,21 +88,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <source>23</source>
-                    <release>23</release>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
